--- a/src/css/style.css
+++ b/src/css/style.css
@@ -602,44 +602,20 @@ video {
   z-index: 1;
 }
 
-.z-\[99999\] {
-  z-index: 99999;
-}
-
-.z-\[99\] {
-  z-index: 99;
-}
-
-.z-\[9\] {
-  z-index: 9;
-}
-
-.z-\[9999999\] {
-  z-index: 9999999;
-}
-
 .z-\[99999999\] {
   z-index: 99999999;
-}
-
-.z-\[999999999\] {
-  z-index: 999999999;
 }
 
 .z-\[999999\] {
   z-index: 999999;
 }
 
-.z-\[9999\] {
-  z-index: 9999;
+.z-\[9\] {
+  z-index: 9;
 }
 
 .m-auto {
   margin: auto;
-}
-
-.m-44 {
-  margin: 11rem;
 }
 
 .mx-2 {
@@ -652,19 +628,9 @@ video {
   margin-right: auto;
 }
 
-.my-16 {
-  margin-top: 4rem;
-  margin-bottom: 4rem;
-}
-
 .my-32 {
   margin-top: 8rem;
   margin-bottom: 8rem;
-}
-
-.my-44 {
-  margin-top: 11rem;
-  margin-bottom: 11rem;
 }
 
 .mb-16 {
@@ -697,6 +663,18 @@ video {
 
 .mt-32 {
   margin-top: 8rem;
+}
+
+.mt-52 {
+  margin-top: 13rem;
+}
+
+.mt-6 {
+  margin-top: 1.5rem;
+}
+
+.mt-64 {
+  margin-top: 16rem;
 }
 
 .block {
